--- a/test/js/echarts-bing - 副本.html
+++ b/test/js/echarts-bing - 副本.html
@@ -1,80 +1,86 @@
+<!DOCTYPE html>
+<head>
+    <meta charset="utf-8">
+    <title>ECharts</title>
+    <script src="../../static/echarts-2.2.1/build/dist/echarts.js"></script>
+</head>
+<body>
+    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
+    <div id="load_chart" style="height:400px"></div>
+    <!-- ECharts单文件引入 -->
+   
+</body>
 
-    
-<script type="text/javascript">
-    function getChart() {
-        $.get("${__static__}/test/kpi-overview.json", function(data) {
-            if (data.status ==1) {
-                var data = data.data;
-                var nameArr = [];
-                var valueArr = [];
-                for (var i = 0; i < data.length; i++) {
-                    nameArr.push(data[i].name);
-                    valueArr.push(data[i].value);
-                }
-                renderChart(nameArr, valueArr);
+    <script>
+ option = {
+    title : {
+        text: '未来一周气温变化',
+        subtext: '纯属虚构'
+    },
+    tooltip : {
+        trigger: 'axis'
+    },
+    legend: { 
+        data:['最高气温','最低气温']
+    },
+    toolbox: {
+        show : true,
+        feature : {
+            mark : {show: true},
+            dataView : {show: true, readOnly: false},
+            magicType : {show: true, type: ['line', 'bar']},
+            restore : {show: true},
+            saveAsImage : {show: true}
+        }
+    },
+    calculable : true,
+    xAxis : [
+        {
+            type : 'category',
+            boundaryGap : false,
+            data : ['周一','周二','周三','周四','周五','周六','周日'] 
+        }
+    ],
+    yAxis : [
+        {
+            type : 'value',
+            axisLabel : {
+                formatter: '{value} °C'
             }
-        }, "json");
-    }
-
-    function renderChart(nameArr, valueArr) {
-        var    option = {
-            title : {
-                text: '质量总览'
+        }
+    ],
+    series : [
+        {
+            name:'最高气温',
+            type:'line',
+            data:[11, 11, 15, 13, 12, 13, 10],
+            markPoint : {
+                data : [
+                    {type : 'max', name: '最大值'},
+                    {type : 'min', name: '最小值'}
+                ] 
             },
-            tooltip : {
-                trigger: 'axis'
+            markLine : {
+                data : [
+                    {type : 'average', name: '平均值'}
+                ]
+            }
+        },
+        {
+            name:'最低气温',
+            type:'line',
+            data:[1, -2, 2, 5, 3, 2, 0],
+            markPoint : {
+                data : [
+                    {name : '周最低', value : -2, xAxis: 1, yAxis: -1.5}
+                ]
             },
-            toolbox: {
-                show : true,
-                feature : {
-                    dataView : {show: true, readOnly: false},
-                    restore : {show: true},
-                    saveAsImage : {show: true}
-                }
-            },
-            calculable : true,
-            xAxis : [
-                {
-                    type : 'category',
-                    data : nameArr
-                }
-            ],
-            yAxis : [
-                {
-                    type : 'value'
-                }
-            ],
-            series : [
-                {
-                    name:'质量',
-                    type:'bar',
-                    data: valueArr,
-                    markPoint : {
-                        data : [
-                            {type : 'max', name: '最大值'},
-                            {type : 'min', name: '最小值'}
-                        ]
-                    },
-                    markLine : {
-                        data : [
-                            {type : 'average', name: '平均值'}
-                        ]
-                    }
-                },
-            ]
-        };
-        // 为echarts对象加载数据
-        myChart.setOption(option);
-    }
-</script>
-{
-  "status": 1,
-  "data": [{
-    "name": "ping",
-    "value":"23.2"
-  },{
-    "name": "tcping",
-    "value":"25.2"
-  }],
-  "info": "success"
-}
+            markLine : {
+                data : [
+                    {type : 'average', name : '平均值'}
+                ]
+            }
+        }
+    ]
+};
+</script>                    
